fixed up the seens page to accomodate extra 'halves'. (made the cookies use for loops etc). switched the 2nd half of gallic wars to be listed as half 4. added caesar 4.20's translation and latin (no a&s). made the seens page use style.visibility rather than hidden (keeps space on the page for hidden elements). probably broke some stuff? idk

--- a/style.css
+++ b/style.css
@@ -97,3 +97,7 @@ table td {
 table.as td {
   width: 50%;
 }
+
+button {
+  text-align: left;
+}
